force-app/main/default/objects/Audit__c/Audit__c.object-meta.xml
<CustomObject>
    <label>Audit Log</label>
    <nameField>
        <label>Audit Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Audit Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>