force-app/main/default/objects/Audit__c/fields/Number_of__c.field-meta.xml
<CustomField>
    <fullName>Number_of__c</fullName>
    <label>Number of deliveries</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>