force-app/main/default/objects/Audit__c/fields/Overclaim_Amount__c.field-meta.xml
<CustomField>
    <fullName>Overclaim_Amount__c</fullName>
    <formula>Total_Claimed__c -  Remaining_Balance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Overclaim Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>