force-app/main/default/objects/Audit__c/fields/Same_User__c.field-meta.xml
<CustomField>
    <fullName>Same_User__c</fullName>
    <formula>CreatedBy.Id ==  Worker__r.enrtcr__User__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Same User</label>
    <type>Checkbox</type>
</CustomField>