force-app/main/default/objects/Audit__c/fields/SD1__c.field-meta.xml
<CustomField>
    <fullName>SD1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SD1</label>
    <referenceTo>enrtcr__Support_Delivered__c</referenceTo>
    <relationshipName>Audits</relationshipName>
    <type>Lookup</type>
</CustomField>