force-app/main/default/objects/Audit__c/fields/SD2__c.field-meta.xml
<CustomField>
    <fullName>SD2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SD2</label>
    <referenceTo>enrtcr__Support_Delivered__c</referenceTo>
    <relationshipName>Audits1</relationshipName>
    <type>Lookup</type>
</CustomField>