force-app/main/default/objects/Audit__c/fields/SD3__c.field-meta.xml
<CustomField>
    <fullName>SD3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SD3</label>
    <referenceTo>enrtcr__Support_Delivered__c</referenceTo>
    <relationshipName>Audits2</relationshipName>
    <type>Lookup</type>
</CustomField>