force-app/main/default/objects/Audit__c/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service</label>
    <referenceTo>enrtcr__Service__c</referenceTo>
    <relationshipName>Audits</relationshipName>
    <type>Lookup</type>
</CustomField>