force-app/main/default/objects/Audit__c/fields/Time_Spent__c.field-meta.xml
<CustomField>
    <fullName>Time_Spent__c</fullName>
    <description>Begin timer on Page load. End timer on submit button clicked</description>
    <label>Time Spent (seconds)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>