force-app/main/default/objects/Audit__c/fields/Total_Claimed__c.field-meta.xml
<CustomField>
    <fullName>Total_Claimed__c</fullName>
    <label>Total Claimed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>