force-app/main/default/objects/Audit__c/fields/User_Input__c.field-meta.xml
<CustomField>
    <fullName>User_Input__c</fullName>
    <label>User Input</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>