force-app/main/default/objects/Audit__c/fields/Worker__c.field-meta.xml
<CustomField>
    <fullName>Worker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Worker</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Record_Type_Name__c</field>
            <operation>equals</operation>
            <value>Employee</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Audits</relationshipName>
    <type>Lookup</type>
</CustomField>