force-app/main/default/objects/Audit__c/recordTypes/Audits.recordType-meta.xml
<RecordType>
    <fullName>Audits</fullName>
    <active>true</active>
    <description>Clinical/Procedural Audits</description>
    <label>Audits</label>
</RecordType>