force-app/main/default/objects/Audit__c/recordTypes/Errors.recordType-meta.xml
<RecordType>
    <fullName>Errors</fullName>
    <active>true</active>
    <label>Errors</label>
</RecordType>