force-app/main/default/objects/Audit__c/recordTypes/Overclaim.recordType-meta.xml
<RecordType>
    <fullName>Overclaim</fullName>
    <active>true</active>
    <label>Overclaim</label>
</RecordType>