force-app/main/default/objects/Audit__c/recordTypes/Service_Audit.recordType-meta.xml
<RecordType>
    <fullName>Service_Audit</fullName>
    <active>true</active>
    <label>Service Audit</label>
</RecordType>