force-app/main/default/objects/Audit__c/recordTypes/Submission.recordType-meta.xml
<RecordType>
    <fullName>Submission</fullName>
    <active>true</active>
    <label>Submission</label>
</RecordType>