force-app/main/default/objects/Audit__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Client__c</columns>
    <columns>Worker__c</columns>
    <columns>Same_User__c</columns>
    <columns>Time_Spent__c</columns>
    <columns>Number_of__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All (Do not Edit)</label>
</ListView>