force-app/main/default/objects/Audit__c/listViews/All_Add_filters_here.listView-meta.xml
<ListView>
    <fullName>All_Add_filters_here</fullName>
    <columns>NAME</columns>
    <columns>Error_Code__c</columns>
    <columns>Error_Message__c</columns>
    <columns>Client__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Total_Claimed__c</columns>
    <columns>Remaining_Balance__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>9/20/2022 12:00 AM</value>
    </filters>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>equals</operation>
        <value>Hock Chia</value>
    </filters>
    <label>All (Add filters here)</label>
</ListView>