force-app/main/default/objects/Audit__c/listViews/By_Clinician.listView-meta.xml
<ListView>
    <fullName>By_Clinician</fullName>
    <columns>NAME</columns>
    <columns>Client__c</columns>
    <columns>Number_of__c</columns>
    <columns>Worker__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Worker__c</field>
        <operation>contains</operation>
        <value>Adi Hu</value>
    </filters>
    <label>By Clinician</label>
</ListView>