force-app/main/default/objects/Audit__c/listViews/Errors.listView-meta.xml
<ListView>
    <fullName>Errors</fullName>
    <columns>NAME</columns>
    <columns>Error_Message__c</columns>
    <columns>Error_Code__c</columns>
    <columns>Worker__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Audit__c.Errors</value>
    </filters>
    <label>Errors (DO NOT EDIT)</label>
    <sharedTo>
        <group>IT</group>
    </sharedTo>
</ListView>