force-app/main/default/objects/Audit__c/listViews/Overclaim.listView-meta.xml
<ListView>
    <fullName>Overclaim</fullName>
    <columns>NAME</columns>
    <columns>Client__c</columns>
    <columns>Worker__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Total_Claimed__c</columns>
    <columns>Remaining_Balance__c</columns>
    <columns>Overclaim_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Audit__c.Overclaim</value>
    </filters>
    <label>Overclaim</label>
</ListView>